--- a/scss/color.scss
+++ b/scss/color.scss
@@ -1,9 +1,17 @@
 
 $bg_blue:rgba(237, 239, 244, 1.00);
 
-$btn_blue_l:rgba(67, 151, 255, 1.00); // 亮藍色
+$blue: rgba(0, 111, 255, 1.00);
 
-$input_grey_l:rgba(220, 219, 220, 1.00); // 淺灰色
+$blue_l:rgba(67, 151, 255, 1.00); // 亮藍色
+$blue_l_30:rgba(67, 151, 255, .3); // 亮藍色(30%)
+
+$blueGrey_l: rgba(117, 132, 153, 1.00); // 灰藍色
+
+$grey_l:rgba(220, 219, 220, 1.00); // 淺灰色
+
+$orange: rgba(233, 151, 25, 1.00); // 橘色
+
 
 $font-grey: rgba(140, 145, 152, 1.00);  // 表單內提示文字
 $font-deep-black: rgba(32, 46, 50, 1.00); // 深黑色
