--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -6,3 +6,51 @@
 //
 
 @import "compass/css3/font-face";
+
+@include font-face("icon", font-files(
+  "icomoon/fonts/icomoon.eot",
+  "icomoon/fonts/icomoon.woff",
+  "icomoon/fonts/icomoon.ttf",
+  "icomoon/fonts/icomoon.svg"));
+
+*[class^="icon-"]:before, *[class*=" icon-"]:before {
+  font-family: "icon";
+
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+}
+
+.icon-icon_mail:before { content: "\e900"; }
+.icon-icon03:before { content: "\e901"; }
+.icon-icon04:before { content: "\e902"; }
+.icon-icon05:before { content: "\e903"; }
+.icon-menu_icon01:before { content: "\e904"; }
+.icon-menu_icon02svg:before { content: "\e905"; }
+.icon-search:before { content: "\e906"; }
+.icon-home:before { content: "\e907"; }
+.icon-lock-closed:before { content: "\e908"; }
+.icon-eye:before { content: "\e909"; }
+.icon-trash:before { content: "\e90a"; }
+.icon-add:before { content: "\e90b"; }
+.icon-add_circle:before { content: "\e90c"; }
+.icon-clear:before { content: "\e90d"; }
+.icon-content_copy:before { content: "\e90e"; }
+.icon-create:before { content: "\e90f"; }
+.icon-remove:before { content: "\e910"; }
+.icon-remove_circle:before { content: "\e911"; }
+.icon-folder_shared:before { content: "\e912"; }
+.icon-dehaze:before { content: "\e913"; }
+.icon-arrow_drop_down:before { content: "\e914"; }
+.icon-arrow_drop_up:before { content: "\e915"; }
+.icon-cancel:before { content: "\e916"; }
+.icon-account_box:before { content: "\e917"; }
+.icon-assignment_ind:before { content: "\e918"; }
+.icon-check_circle:before { content: "\e919"; }
+.icon-exit_to_app:before { content: "\e91a"; }
+.icon-info:before { content: "\e91b"; }
+.icon-chevron-down:before { content: "\e91c"; }
+.icon-chevron-up:before { content: "\e91d"; }
+.icon-send:before { content: "\e91e"; }
+.icon-lock:before { content: "\e91f"; }
