--- a/scss/space.scss
+++ b/scss/space.scss
@@ -1,19 +1,52 @@
 
 
-.ptd-40 {
+.p-td-40 {
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
-.plr-30 {
+.p-lr-30 {
   padding-left: 30px;
   padding-right: 30px;
 }
 
-.pd-40 {
+.p-d-40 {
   padding-bottom: 40px;
 }
 
-.md-20 {
+.p-d-15 {
+  padding-bottom: 15px;
+}
+
+.p-t-16 {
+  padding-top: 16px;
+}
+
+.p-r-15 {
+  padding-right: 15px;
+}
+
+.p-l-15 {
+  padding-left: 15px;
+}
+
+
+
+
+
+
+.m-d-20 {
   margin-bottom: 20px;
+}
+
+.m-d-100 {
+  margin-bottom: 100px;
+}
+
+.m-l-15 {
+  margin-left: 15px;
+}
+
+.m-l-10 {
+  margin-left: 10px;
 }
