--- a/css/font.css
+++ b/css/font.css
@@ -1,7 +1,15 @@
 p { padding: 0; margin: 0; }
 
-.menu-title { text-align: left; font-size: 2rem; color: #202e32; font-weight: bolder; padding: 15px 0; }
-
 .text-l { text-align: left; }
 
+.text-r { text-align: right; }
+
+.line-h-80 { line-height: 80px; }
+
+.menu-title { text-align: left; font-size: 2rem; color: #202e32; font-weight: bolder; padding: 30px 0; }
+
 .t-b-28 { font-size: 2rem; font-weight: bolder; }
+
+.t-r-15 { font-size: 1.15rem; }
+
+.topName { display: inline-block; font-size: 1.38rem; line-height: 80px; padding-right: 15px; }
