--- a/css/input.css
+++ b/css/input.css
@@ -5,3 +5,15 @@ input, textarea { border: 0 none; outline: 0; background-color: transparent; -mo
 
 .input-f { display: inline-block; width: 100%; color: #202e32; font-size: 1.1rem; padding: 10px 15px; border: 1px solid #dcdbdc; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
 .input-f::placeholder { color: #8c9198; }
+
+label { padding: 0; margin-right: 12px; cursor: pointer; }
+
+.rememberCheck { display: none; }
+.rememberCheck + span { display: inline-block; padding-left: 26px; line-height: 13px; background: url(../img/cbx-off.svg) no-repeat; user-select: none; }
+.rememberCheck:checked + span { background: url(../img/cbx-on.svg) no-repeat; }
+
+.search-container { float: left; margin-top: 20px; border: 1px solid #dcdbdc; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+.search-container input[type=text] { padding: 6px; margin-top: 2px; font-size: 1rem; border: none; }
+.search-container input[type=text]::placeholder { color: #dcdbdc; }
+.search-container .searchBtn { float: left; padding: 7px 10px 5px 8px; font-size: 1.2rem; border: none; cursor: pointer; color: #dcdbdc; background-color: rgba(67, 151, 255, 0); -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; }
+.search-container .searchBtn:hover, .search-container .searchBtn:active { background-color: #4397ff; color: white; }
