--- a/css/link.css
+++ b/css/link.css
@@ -2,5 +2,32 @@
 
 button, a { cursor: pointer; text-decoration: none; outline: 0; }
 
-.btn-full-blue { display: inline-block; width: 100%; padding: 10px 0; color: white; font-size: 1.2rem; background-color: #4397ff; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+button { border: 0; }
+
+.btn-full-blue { display: inline-block; width: 100%; padding: 10px 0; color: white; font-size: 1.23rem; background-color: #4397ff; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
 .btn-full-blue:hover { opacity: .9; }
+
+.btn-half-blue, .btn-half-grey { display: inline-block; padding: 10px 20px; color: white; font-size: 1.23rem; min-width: 120px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+.btn-half-blue:hover, .btn-half-grey:hover { opacity: .9; }
+
+.btn-half-blue { background-color: #4397ff; }
+
+.btn-half-grey { background-color: #dcdbdc; }
+
+.menuArea { display: inline-block; width: calc(100% / 7 - 40px * 6 / 7); max-height: 115px; background-color: white; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; float: left; padding: 15px; margin-left: 40px; margin-bottom: 40px; }
+.menuArea:nth-child(7n+1) { margin-left: 0; }
+
+.forgetPW { display: inline-block; color: #202e32; }
+.forgetPW:before { display: inline-block; content: '\e908'; color: rgba(67, 151, 255, 0.3); font-family: icon; font-size: 1rem; margin-right: 8px; }
+.forgetPW:hover, .forgetPW:active { color: #4397ff; }
+
+.iconLink { display: inline-block; width: 25px; height: 25px; font-size: 1rem; color: white; text-align: center; line-height: 25px; -moz-border-radius: 25px; -webkit-border-radius: 25px; border-radius: 25px; }
+.iconLink.linkBlue { background-color: rgba(67, 151, 255, 0.3); }
+.iconLink.linkBlue:hover, .iconLink.linkBlue:active { background-color: #4397ff; }
+.iconLink.linkGrey { background-color: #758499; }
+
+.tag { display: inline-block; font-size: .9rem; color: #758499; }
+.tag:after { display: inline-block; content: '/'; margin: 0 5px; }
+.tag:hover, .tag:active { color: #006fff; }
+.tag:hover:after, .tag:active:after { color: #758499; }
+.tag:last-child:after { display: none; }
