--- a/css/space.css
+++ b/css/space.css
@@ -1,7 +1,21 @@
-.ptd-40 { padding-top: 40px; padding-bottom: 40px; }
+.p-td-40 { padding-top: 40px; padding-bottom: 40px; }
 
-.plr-30 { padding-left: 30px; padding-right: 30px; }
+.p-lr-30 { padding-left: 30px; padding-right: 30px; }
 
-.pd-40 { padding-bottom: 40px; }
+.p-d-40 { padding-bottom: 40px; }
 
-.md-20 { margin-bottom: 20px; }
+.p-d-15 { padding-bottom: 15px; }
+
+.p-t-16 { padding-top: 16px; }
+
+.p-r-15 { padding-right: 15px; }
+
+.p-l-15 { padding-left: 15px; }
+
+.m-d-20 { margin-bottom: 20px; }
+
+.m-d-100 { margin-bottom: 100px; }
+
+.m-l-15 { margin-left: 15px; }
+
+.m-l-10 { margin-left: 10px; }
