--- a/scss/font.scss
+++ b/scss/font.scss
@@ -5,21 +5,38 @@ p {
   margin: 0;
 }
 
+.text-l {
+  text-align: left;
+}
+
+.text-r {
+  text-align: right;
+}
+
+.line-h-80 {
+  line-height: 80px;
+} 
+
 .menu-title {
   text-align: left;
   font-size: 2rem;
   color: $font-deep-black;
   font-weight: bolder;
-  padding: 15px 0;
+  padding: 30px 0;
 }
-
-.text-l {
-  text-align: left;
-}
-
 
 .t-b-28 {
   font-size: 2rem;
   font-weight: bolder;
 }
 
+.t-r-15 {
+  font-size: 1.15rem;
+}
+
+.topName {
+  display: inline-block;
+  font-size: 1.38rem;
+  line-height: 80px;
+  padding-right: 15px;
+}
