--- a/scss/input.scss
+++ b/scss/input.scss
@@ -15,10 +15,73 @@ input, textarea {
   color: $font-deep-black;
   font-size: 1.1rem;
   padding: 10px 15px;
-  border: 1px solid $input_grey_l;
+  border: 1px solid $grey_l;
   @include border-radius(3px);
 
   &::placeholder {
     color: $font-grey;
   }
 }
+
+label {
+  padding: 0;
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+.rememberCheck {
+  display: none;
+
+  + span {
+    display: inline-block;
+    padding-left: 26px;
+    line-height: 13px;
+    background: url(../img/cbx-off.svg) no-repeat;
+    user-select: none;
+  }
+
+  &:checked + span {
+    background: url(../img/cbx-on.svg) no-repeat;
+  }
+}
+
+.search-container {
+  float: left;
+  margin-top: 20px;
+  border: 1px solid $grey_l;
+  @include border-radius(3px);
+
+  input[type=text] {
+    padding: 6px;
+    margin-top: 2px;
+    font-size: 1rem;
+    border: none;
+
+    &::placeholder {
+      color: $grey_l;
+    }
+  }
+
+  .searchBtn {
+    float: left;
+    padding: 7px 10px 5px 8px;
+    // margin-top: 8px;
+    font-size: 1.2rem;
+    border: none;
+    cursor: pointer;
+    color: $grey_l;
+    background-color: rgba(67, 151, 255, 0);
+    @include transition(all .3s);
+
+    &:hover, &:active {
+      background-color: rgba(67, 151, 255, 1);
+      color: white;
+    }
+  }
+}
+
+
+
+
+
+
