--- a/scss/link.scss
+++ b/scss/link.scss
@@ -7,16 +7,136 @@ button, a {
   outline: 0;
 }
 
+button {
+  border: 0;
+}
+
 .btn-full-blue {
   display: inline-block;
   width: 100%;
   padding: 10px 0;
   color: white;
-  font-size: 1.2rem;
-  background-color: $btn_blue_l;
+  font-size: 1.23rem;
+  background-color: $blue_l;
   @include border-radius(3px);
 
   &:hover {
     opacity: .9;
   }
 }
+
+.btn-half-blue, .btn-half-grey {
+  display: inline-block;
+  padding: 10px 20px;
+  color: white;
+  font-size: 1.23rem;
+  min-width: 120px;
+  @include border-radius(3px);
+
+  &:hover {
+    opacity: .9;
+  }
+}
+.btn-half-blue {
+  background-color: $blue_l;
+}
+.btn-half-grey {
+  background-color: $grey_l;
+}
+
+.menuArea {
+  display: inline-block;
+  width: calc(100% / 7 - 40px * 6 / 7);
+  max-height: 115px;
+  background-color: white;
+  @include border-radius(3px);
+  float: left;
+  padding: 15px;
+  margin-left: 40px;
+  margin-bottom: 40px;
+
+  &:nth-child(7n+1) {
+    margin-left: 0;
+  }
+}
+
+.forgetPW {
+  display: inline-block;
+  color: rgba(32, 46, 50, 1.00);
+
+  &:before {
+    display: inline-block;
+    content: '\e908';
+    color: $blue_l_30;
+    font-family: icon;
+    font-size: 1rem;
+    margin-right: 8px;
+  }
+
+  &:hover, &:active {
+    color: $blue_l;
+  }
+}
+
+
+.iconLink {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  font-size: 1rem;
+  color: white;
+  text-align: center;
+  line-height: 25px;
+  @include border-radius(25px);
+  
+  &.linkBlue {
+    background-color: $blue_l_30;
+
+    &:hover, &:active {
+      background-color: $blue_l;
+    }
+  }
+
+  &.linkGrey {
+    background-color: $blueGrey_l;
+  }
+}
+
+.tag {
+  display: inline-block;
+  font-size: .9rem;
+  color: $blueGrey_l;
+
+  &:after {
+    display: inline-block;
+    content: '/';
+    margin: 0 5px;
+  }
+
+  &:hover, &:active {
+    color: $blue;
+
+    &:after {
+      color: $blueGrey_l;
+    }
+  }
+
+  &:last-child {
+    &:after {
+      display: none;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
